# agentic-soc-pipeline

./: .env.example  README.md  docker-compose.yml  pyproject.toml
config/data_contracts/: edr_events.yaml
docker/: Dockerfile
src/: __init__.py  config.py  main.py  models.py
src/agents/: base.py  malware.py  orchestrator.py  triage.py
src/api/: main.py
src/memory/: manager.py
src/pipeline/: __init__.py  enrichment.py  ingestion.py  streaming.py
src/quality/: contracts.py
tests/: test_core.py
